# scangearmp2

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  NEWS  PKGBUILD  README  README.md  scangearmp2.spec
.github/workflows/: c-cpp.yml
.github/workflows/debian-build/: Dockerfile  README.md  action.yml
com/libs_bin32/: libcncpnet20.so.1.0.0
com/libs_bin64/: libcncpmslld2.so.3.0.0  libcncpnet2.so.1.2.4
debian/: README.Debian  README.source  changelog  control  copyright  docs  postinst  postrm  rules  shlibs.local
debian/patches/: README.patch  libsane-canon_pixma.patch  scanmain.patch  series
doc/: LICENSE-scangearmp-3.40FR.txt  LICENSE-scangearmp-3.40SC.txt  LICENSE-scangearmp-4.10JP.txt
etc/: canon-scan.xml
etc/sane.d/: canon_pixma.conf
etc/sane.d/dll.d/: mfp2
etc/udev/rules.d/: 80-canon_mfp2.rules
po/: CMakeLists.txt  POTFILES.in  de.po  fr.po  ja.po  ru.po  scangearmp2.pot  zh.po
scangearmp2/: COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  acconfig.h  configure.in  mkgladeh.sh  scangearmp2.glade  scangearmp2.glade.h
scangearmp2/etc/: 80-canon_mfp2.rules  Makefile.am  canon-scan.xml
scangearmp2/include/: Makefile.am  cnmslld.h  cnmstype.h  libcnnet.h  libcnnet2_type.h  libcnnet3_type.h  libcnnet3_url.h
scangearmp2/po/: POTFILES.in  de.po  fr.po  ja.po  ru.po  scangearmp2.pot  zh.po
scangearmp2/src/: Makefile.am  callbacks.c  callbacks.h  canon_mfp2.conf  canon_mfp_io.c  canon_mfp_tools.c  canon_mfp_tools.h  cnmsfunc.c  cnmsfunc.h  cnmsstrings.h  errordlg.c  errordlg.h  errors.h  file_control.c  file_control.h  jpeg2pdf.c  jpeg2pdf.h  keep_setting.c  keep_setting.h  main.c  mainui.c  mainui.h  progressbar.c  progressbar.h  scangearmp2  scanmain.c  scanmain.h  selectdevice.c  selectdevice.h  support.h
scangearmp2/src/sane/: canon_pixma.c  canon_pixma.h  errordlg.c  errordlg.h  sane.h  sanei.h  sanei_backend.h  sanei_debug.h  sanei_init_debug.c  saneopts.h
scripts/install_deb/: install.sh
scripts/install_rpm/: install.sh
scripts/resources/: scanner_fr_utf8.lc  scanner_ja_utf8.lc  scanner_zh_utf8.lc
src/: CMakeLists.txt  callbacks.c  callbacks.h  canon_mfp2.conf  canon_mfp_io.c  canon_mfp_tools.c  canon_mfp_tools.h  cnmsfunc.c  cnmsfunc.h  cnmsstrings.h  errordlg.c  errordlg.h  errors.h  file_control.c  file_control.h  gtk3compat.c  gtk3compat.h  jpeg2pdf.c  jpeg2pdf.h  keep_setting.c  keep_setting.h  main.c  mainui.c  mainui.h  progressbar.c  progressbar.h  scanmain.c  scanmain.h  selectdevice.c  selectdevice.h  support.h
src/sane/: CMakeLists.txt  canon_pixma.c  canon_pixma.h  errordlg.c  errordlg.h  sanei.h  sanei_debug.h
usr/include/: cnmslld.h  cnmstype.h  libcnnet.h  libcnnet2.h  libcnnet2_type.h  libcnnet3.h
usr/lib32/: CMakeLists.txt  libcncpmslld2.so.3.0.0  libcncpnet2.so.1.2.4  libcncpnet2.so.1.2.5  libcncpnet20.so.1.0.0  libcncpnet30.so.1.0.0
usr/lib32/bjlib/: canon_mfp2.conf  canon_mfp2_net.ini
usr/lib64/: libcncpmslld2.so.3.0.0  libcncpnet2.so.1.2.5  libcncpnet20.so.1.0.0  libcncpnet30.so.1.0.0
usr/lib64/bjlib/: canon_mfp2.conf
usr/libaarch64/: libcncpmslld2.so.3.0.0  libcncpnet2.so.1.2.5  libcncpnet20.so.1.0.0  libcncpnet30.so.1.0.0
usr/libaarch64/bjlib/: canon_mfp2.conf
usr/libmips64/: CMakeLists.txt  libcncpmslld2.so.3.0.0  libcncpnet2.so.1.2.5  libcncpnet20.so.1.0.0  libcncpnet30.so.1.0.0
usr/libmips64/bjlib/: canon_mfp2.conf
usr/share/applications/: scangearmp2.desktop
usr/share/scangearmp2/: CMakeLists.txt  scangearmp2.cmb  scangearmp2.glade  scangearmp2.ui  scangearmp2.ui.h  scangearmp22.glade
usr/share/scangearmp2/doc/: LICENSE-scangearmp-4.60EN.txt  LICENSE-scangearmp-4.70aSC.txt  LICENSE-scangearmp-4.71EN.txt  LICENSE-scangearmp-4.71FR.txt  LICENSE-scangearmp-4.71JP.txt  LICENSE-scangearmp-4.80SC.txt  LICENSE-scangearmp-4.81FR.txt  LICENSE-scangearmp-4.81JP.txt  LICENSE-scangearmp-4.90EN.txt  LICENSE-scangearmp-4.90SC.txt  Readme_EN.txt  Readme_FR.txt  Readme_JP.txt  Readme_SC.txt
