dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)

AC_ARG_ENABLE(libpath)
if test "${enable_libpath}" = ""; then
  enable_libpath="/usr/lib"
fi

AC_DEFINE_UNQUOTED(CNMSLIBPATH, $enable_libpath/bjlib)
AC_SUBST(CNMSLIBPATH)

AC_SUBST(enable_libpath)

AM_INIT_AUTOMAKE(scangearmp2, 3.90-1)
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL
AC_PROG_LIBTOOL
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_C_O
dnl AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_RANLIB

pkg_modules="gtk+-2.0 >= 2.16.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

g_modules="gmodule-2.0 >= 2.0.0"
PKG_CHECK_MODULES(GMODULE, [$g_modules])
AC_SUBST(GMODULE_CFLAGS)
AC_SUBST(GMODULE_LIBS)

libusb1="libusb-1.0 >= 1.0.0"
PKG_CHECK_MODULES(LIBUSB_1_0, [$libusb1])
AC_SUBST(LIBUSB_1_0_CFLAGS)
AC_SUBST(LIBUSB_1_0_LIBS)

AC_CHECK_HEADERS(stdio.h)

GETTEXT_PACKAGE=scangearmp2
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl OPTION
CFLAGS="-O2 -D_FILE_OFFSET_BITS=64"

dnl Add the languages which your application supports here.
ALL_LINGUAS="de fr ja zh ru"
AM_GLIB_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

AC_OUTPUT(
Makefile
po/Makefile.in
src/Makefile
include/Makefile
etc/Makefile)

